--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -18,8 +17,11 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
+      working-directory: WebApp
       run: dotnet restore
     - name: Build
+      working-directory: WebApp
       run: dotnet build --no-restore
     - name: Test
+      working-directory: WebApp
       run: dotnet test --no-build --verbosity normal
