--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -5,16 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NSwag.AspNetCore" Version="13.14.4" />
     <PackageReference Include="NSwag.MSBuild" Version="13.14.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3" />
   </ItemGroup>
 
   <Target Name="NSwag" AfterTargets="Build">
     <Exec Command="$(NSwagExe_Net50) run nswag_v1.json /variables:Configuration=$(Configuration)" />
-    <Exec Command="$(NSwagExe_Net50) run nswag_v2.json /variables:Configuration=$(Configuration)" />
+    <!-- <Exec Command="$(NSwagExe_Net50) run nswag_v2.json /variables:Configuration=$(Configuration)" /> -->
   </Target>
 
 </Project>
