--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,12 +16,22 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+
     - name: Restore dependencies
       working-directory: WebApp
       run: dotnet restore
+
     - name: Build
       working-directory: WebApp
       run: dotnet build --no-restore
+
     - name: Test
       working-directory: WebApp
       run: dotnet test --no-build --verbosity normal
+
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v2
+      with:
+        name: weather_openapi_v1.json
+        path: openapi_v1.json
+        retention-days: 5
