--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,5 +33,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: weather_openapi_v1.json
-        path: openapi_v1.json
+        path: WebApp/openapi_v1.json
         retention-days: 5
